--- a/css/style.css
+++ b/css/style.css
@@ -109,9 +109,8 @@ iframe {
  border-radius: 10px;
  border-color: black;
  border-width: thick;
- border-style: dotted;
+ border-style: solid;
  margin: 20px;
- margin-top: 200px;
  max-width: 100%;
  margin-left: auto;
  margin-right: auto;
