--- a/css/style.css
+++ b/css/style.css
@@ -118,12 +118,12 @@ iframe {
 
 @media (min-width: 800px) {
   body {
-    background-color: #ef5555;
+    background-color: grey;
   }
   }
 
 @media (min-width: 1500px) {
   body {
-    background-color: #9a77f1;
+    background-color: #d3d3d3;
   }
   }
